// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test a search of test1 ix file Search for "for" in test1/myTrix.ix 1`] = `
Array [
  Object {
    "itemId": "id1",
    "wordIx": 4,
  },
  Object {
    "itemId": "id2",
    "wordIx": 4,
  },
  Object {
    "itemId": "id3",
    "wordIx": 4,
  },
]
`;

exports[`Test a search of test1 ix file Search for "id1" in test1/myTrix.ix 1`] = `
Array [
  Object {
    "itemId": "id1",
    "wordIx": 5,
  },
]
`;

exports[`Test a search of test1 ix file Search for "is" in test1/myTrix.ix 1`] = `
Array [
  Object {
    "itemId": "id1",
    "wordIx": 2,
  },
  Object {
    "itemId": "id2",
    "wordIx": 2,
  },
  Object {
    "itemId": "id3",
    "wordIx": 2,
  },
]
`;

exports[`Test a search of test1 ix file Search for "nope" in test1/myTrix.ix 1`] = `Array []`;

exports[`Test a search of test1 ix file Search for "this" in test1/myTrix.ix 1`] = `
Array [
  Object {
    "itemId": "id1",
    "wordIx": 1,
  },
  Object {
    "itemId": "id2",
    "wordIx": 1,
  },
  Object {
    "itemId": "id3",
    "wordIx": 1,
  },
]
`;

exports[`Test a search of test2 ix file Search for "focad" in test2/out.ix 1`] = `
Array [
  Object {
    "itemId": "ENST00000439876.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000445051.1",
    "wordIx": 1,
  },
]
`;

exports[`Test a search of test2 ix file Search for "linc" in test2/out.ix 1`] = `
Array [
  Object {
    "itemId": "ENST00000416999.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000423414.5",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000429901.2",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000431189.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000433079.5",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000435523.5",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000443623.5",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000451786.5",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000642156.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000642483.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000642602.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000643135.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000643373.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000643855.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000643874.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000644188.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000644804.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000645248.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000646429.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000646587.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000647288.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000647388.1",
    "wordIx": 1,
  },
]
`;

exports[`Test a search of test2 ix file Search for "none" in test2/out.ix 1`] = `Array []`;

exports[`Test parsing a hit on test1 Parse hit string 1`] = `
Array [
  Object {
    "itemId": "id1",
    "wordIx": 1,
  },
  Object {
    "itemId": "id2",
    "wordIx": 1,
  },
  Object {
    "itemId": "id3",
    "wordIx": 1,
  },
]
`;

exports[`Test parsing a hit on test2 Parse hit string 1`] = `
Array [
  Object {
    "itemId": "ENST00000458677.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000627453.2",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000627596.2",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000627957.2",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000629311.1",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000630575.2",
    "wordIx": 1,
  },
  Object {
    "itemId": "ENST00000630625.1",
    "wordIx": 1,
  },
]
`;

exports[`Test the parsing of test1 ixx file Parse test1/myTrix.ixx 1`] = `
Map {
  "for  " => 0,
}
`;

exports[`Test the parsing of test2 ixx file Parse test2/out.ixx 1`] = `
Map {
  "a1bg-" => 0,
  "ac008" => 61706,
  "ac015" => 129243,
  "ac027" => 193731,
  "ac090" => 261827,
  "ac103" => 325384,
  "ac136" => 392173,
  "al121" => 454548,
  "al357" => 523062,
  "ap000" => 582260,
  "cu639" => 656147,
  "enst0" => 673037,
  "entpd" => 2510607,
  "linc0" => 2562546,
  "linc2" => 2816649,
  "pcbp2" => 2885361,
  "tfap2" => 2954357,
}
`;
